<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/fondoPrincipal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="6">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.7"
        android:src="@drawable/imapres"
        android:scaleType="centerCrop"/>



        <Button
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/bCaluclar"
            android:id="@+id/bCalcularPrestamo"
            android:textColor="@color/color01"
            android:backgroundTint="@color/colorButton"
            android:padding="5dp"
            android:layout_marginTop="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/detalleact"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:padding="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/detalleact2"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:padding="25dp" />

</LinearLayout>